# cAligner

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Basics/: Default.h
FileIO/: Dm3File.cpp.orig  Dm3File.h  Dm3FileStack.cpp  Dm3FileStack.h  Dm3FileTag.cpp  Dm3FileTag.h  Dm3FileTagDirectory.cpp  Dm3FileTagDirectory.h  Dm3_4_Enums.h  Dm4File.cpp  Dm4File.h  Dm4FileStack.cpp  Dm4FileStack.h  Dm4FileTag.cpp  Dm4FileTag.h  Dm4FileTagDirectory.cpp  Dm4FileTagDirectory.h  EmFile.cpp  EmFile.h  EmHeader.h  File.cpp  File.h  FileIO.h  FileIOException.cpp  FileIOException.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  ImageBase.cpp  ImageBase.h  ImodFiducialFile.cpp  ImodFiducialFile.h  MDocFile.cpp  MDocFile.h  MRCFile.cpp  MRCFile.h  MarkerFile.cpp  MarkerFile.h  MovieStack.cpp  (+17 more)
FilterGraph/: FilterGraph.h  FilterParameter.h  FilterParameter3D.h  FilterPoint2D.cpp  FilterPoint2D.h  FilterPoint3D.cpp  FilterPoint3D.h  FilterROI.cpp  FilterROI.h  FilterROI3D.cpp  FilterROI3D.h  FilterSize.cpp  FilterSize.h  FilterSize3D.cpp  FilterSize3D.h  HostSinkElement2D.cpp  HostSinkElement2D.h  HostSourceElement2D.cpp  HostSourceElement2D.h  HostSplitterElement2D.cpp  HostSplitterElement2D.h  IComputeParameters.cpp  IComputeParameters.h  IFilterElement.cpp  IFilterElement.h  Matrix.cpp  Matrix.h  PointF.cpp  PointF.h
MKLog/: MKLog.cpp  MKLog.h
Minimization/: AlignmentProblem.cpp  AlignmentProblem.h  Solver.cpp  Solver.h
